[gd_scene load_steps=18 format=3 uid="uid://djdydgvfwmvkw"]

[ext_resource type="PackedScene" uid="uid://rdhtlst7byq6" path="res://scenes/objects/container/container.tscn" id="1_j4va1"]
[ext_resource type="Script" uid="uid://t7em2v1dfigf" path="res://scenes/objects/container/validator_container.gd" id="2_obig6"]

[sub_resource type="Animation" id="Animation_6iila"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Polygon2D:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Polygon2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_iksxp"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.533333, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.33, 1.33), Vector2(0.845, 0.845), Vector2(1.125, 1.125)]
}

[sub_resource type="Animation" id="Animation_obig6"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(0, 0.745098, 0, 1), Color(0.926081, 0.837644, 0, 1)]
}

[sub_resource type="Animation" id="Animation_j4va1"]
resource_name = "wrong_number"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.926081, 0.837644, 0, 1), Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, -0.523599, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Polygon2D:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Polygon2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5),
"transitions": PackedFloat32Array(2, -2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6iila"]
_data = {
&"RESET": SubResource("Animation_6iila"),
&"completion": SubResource("Animation_iksxp"),
&"correct_number": SubResource("Animation_obig6"),
&"wrong_number": SubResource("Animation_j4va1")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6iila"]
animation = &"completion"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_obig6"]
animation = &"correct_number"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iksxp"]
animation = &"wrong_number"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j4va1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_obig6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iksxp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6iila"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1h8jd"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_12v0a"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pcyma"]
states/completed/node = SubResource("AnimationNodeAnimation_6iila")
states/completed/position = Vector2(658, 113)
states/correct_number/node = SubResource("AnimationNodeAnimation_obig6")
states/correct_number/position = Vector2(520, 147)
states/wrong_number/node = SubResource("AnimationNodeAnimation_iksxp")
states/wrong_number/position = Vector2(520, 59)
transitions = ["Start", "wrong_number", SubResource("AnimationNodeStateMachineTransition_j4va1"), "Start", "correct_number", SubResource("AnimationNodeStateMachineTransition_obig6"), "Start", "completed", SubResource("AnimationNodeStateMachineTransition_iksxp"), "wrong_number", "End", SubResource("AnimationNodeStateMachineTransition_6iila"), "correct_number", "End", SubResource("AnimationNodeStateMachineTransition_1h8jd"), "completed", "End", SubResource("AnimationNodeStateMachineTransition_12v0a")]

[node name="ValidatorContainer" groups=["validator_containers"] instance=ExtResource("1_j4va1")]
script = ExtResource("2_obig6")
expected_numbers = []

[node name="Label" parent="." index="3"]
text = "validação"

[node name="Grabbable" parent="." index="4"]
visible = false
disabled = true

[node name="ObjectPopupMenu" parent="." index="5"]
delete_default = false

[node name="ValidationAnimationPlayer" type="AnimationPlayer" parent="." index="6"]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_6iila")
}

[node name="AnimationTree" type="AnimationTree" parent="." index="7"]
process_mode = 3
tree_root = SubResource("AnimationNodeStateMachine_pcyma")
anim_player = NodePath("../ValidationAnimationPlayer")

[node name="ConnectionArea" parent="." index="8"]
sends = false

[node name="Activatable" parent="." index="9"]
auto = false

[connection signal="number_received" from="." to="." method="_on_number_received"]
